--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="overlay"></div>  <!-- Camada de máscara -->
+    
+    <!-- Título "Horário de Brasília" -->
+    <h2><strong>Horário de Brasília</strong></h2>
+    
+    <!-- Relógio -->
     <div class="clock">
         <span id="hours">00</span>
         <span id="minutes">00</span>
         <span id="seconds">00</span>
     </div>
-    <h2>Horário de Brasília</strong></h2>
+
+    <!-- Data -->
+    <div class="date" id="date">Domingo, 24 de novembro de 2024</div>
+
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
